# SupplyChain

./: .gitignore  CMakeLists.txt  readme.md
include/: element.hpp  factory.hpp  main.hpp  map_element.hpp  road.hpp  traffic_manager.hpp  truck.hpp  util.hpp  widget.hpp
src/: main.cpp
src/util/: traffic_manager.cpp  traffice_manager.cpp
